--- a/ASP/H/narbar.html
+++ b/ASP/H/narbar.html
@@ -8,6 +8,8 @@
         <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.5.1/jquery.min.js"></script>
         <script src="https://cdnjs.cloudflare.com/ajax/libs/popper.js/1.16.0/umd/bootstrap.bundle.min.js"></script>
         <script src="https://maxcdn.bootstrapcdn.com/bootstrap/4.5.2/js/font-awesome.min.css.js"></script>
+        <link rel="preconnect" href="https://fonts.gstatic.com">
+<link href="https://fonts.googleapis.com/css2?family=Poppins:wght@200&display=swap" rel="stylesheet">
         <link rel="icon" href="logo.png">
       </head>
     <!-- Navbar-->
@@ -21,13 +23,13 @@
         <div class="collapse navbar-collapse" id="navbarNav">
             <ul class="navbar-nav mr-auto">
                 <li class="nav-item active">
-                    <a class="nav-link" href="#">Home <span class="sr-only">(current)</span></a>
+                  <a class="hover-1" href="#">Mikel - REY</a>
                 </li>
                 <li class="nav-item">
-                    <a class="nav-link" href="#">Features</a>
+                    <a class="hover-1" href="#">Alvaro - Cafe</a>
                 </li>
                 <li class="nav-item">
-                    <a class="nav-link" href="#">Pricing</a>
+                    <a class="hover-1" href="#">Jorge - Sapo</a>
                 </li>
             </ul>
             <ul class="navbar-nav">
@@ -41,7 +43,12 @@
         </div>
     </nav>
 </header>
-<div class="imgFondoa">
+<div class="containerra">
+    <img src="house.jpg" class="imgFondoa">
+    <div class="centered">Hacer lo de las busquedas aqui</div>
+    <div class="textoBonito1">Presentacion</div>
+    <div class="textoBonito2">Infomacion Pequena</div>
+    <div class="textoBonito3">Botton</div>
 </div>
 <div class="container">
     <div class="pt-5 text-white">
