--- a/ASP/H/narbar.html
+++ b/ASP/H/narbar.html
@@ -11,7 +11,7 @@
         <link rel="preconnect" href="https://fonts.gstatic.com">
         <link href="https://fonts.googleapis.com/css2?family=Poppins:wght@200&display=swap" rel="stylesheet">
         <link rel="preconnect" href="https://fonts.gstatic.com">
-<link href="https://fonts.googleapis.com/css2?family=Montserrat:wght@500&display=swap" rel="stylesheet">
+        <link href="https://fonts.googleapis.com/css2?family=Montserrat:wght@500&display=swap" rel="stylesheet">
         <link rel="icon" href="logo_transparentApng.png">
       </head>
     <!-- Navbar-->
@@ -45,18 +45,15 @@
         </div>
     </nav>
 </header>
-<div class="containerra">
-    <div  class="imgFondoa"><img src="house.jpg" id ="yourImgId"></div>
-    <div class="centered">Hacer lo de las busquedas aqui</div>
+<div class="containerra"></div>
     <div class="textoBonito1"><h2>JOMIAL</h2></div>
-    <div class="textoBonito2"><h4>Experiencia para dormir<br> de 5 estrellas <br> a un precio de 1 estrella</h4></div>
-    <div class="textoBonito3"><div class="box-1">
-        <div class="btn btn-one">
-          <span>VAMOS</span>
-        </div>
-      </div></div>
-</div>
-<section class="random-section">
+    <div class="textoBonito2"><h4>Si queremos poner algo</h4></div>
+    <div class="textoBonito3">
+            <div class="btn btn-one">
+                <span onclick="myFunction()">VAMOS</span>
+            </div>    
+    </div>
+<section id="mysection" class="main">
     <div class="container">
         <div class="pt-5 text-white">
             <header class="py-5 mt-5">
