--- a/ASP/H/narbar.html
+++ b/ASP/H/narbar.html
@@ -18,7 +18,7 @@
 <body>
 <header class="header">
     <nav class="navbar navbar-expand-lg fixed-top py-3">
-        <a class="navbar-brand" href="#"><img src="logo.png"></a>
+        <a class="navbar-brand" href="#mysection"><img src="logo.png"></a>
        <button type="button" data-toggle="collapse" data-target="#navbarSupportedContent" aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation" class="navbar-toggler navbar-toggler-right"><i class="fa fa-bars"></i></button>
             <span class="navbar-toggler-icon"></span>
         </button>
@@ -50,7 +50,7 @@
     <div class="textoBonito2"><h4>Si queremos poner algo</h4></div>
     <div class="textoBonito3">
             <div class="btn btn-one">
-                <span onclick="myFunction()">VAMOS</span>
+                <a class = "prueba" href="#mysection"> <span>VAMOS</span></a>
             </div>    
     </div>
 <section id="mysection" class="main">
